Basic bot ready

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><script type="text/javascript" src="index.js"></script></head>
+<head><script type="text/javascript" src="./index.js"></script></head>
 <body >
   <link rel="stylesheet" type="text/css" href="index.css">
 
